<resources>
    <string name="app_name">Project_Management_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Title">Home</string>
    <string name="Picture">Picture</string>
    <string name="Recent_Activities">Recent Activities</string>
    <string name="TextView">TBD</string>
    <string name="users_name">John Doe</string>
    <string name="users_info">This is user\'s information</string>
    <string name="users_email">Email@email.com</string>
    <string name="users_phone">123-456-7890</string>
    <string name="users_position">Intern</string>
    <string name="tasks">Tasks</string>
    <string name="active">Active</string>
    <string name="title_activity_tasks_new_task">tasks_newTask</string>
    <string name="name">Name:</string>
    <string name="taskName">Name: </string>
    <string name="taskDescription">Description: </string>
    <string name="taskPriority">Priority: </string>
    <string name="taskProgress">Progress: </string>
    <string name="taskDueDate">Due Date: </string>
    <string name="taskAssignedTo">Assigned To: </string>
    <string name="taskAssignDate">Assigned Date: </string>
    <string name="completed">Completed</string>

    <string-array name="priority_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
